// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expensesSummary is rendered as expected with 0 expenses 1`] = `
<DocumentFragment>
   viewing  0 expense(s) totalling $0.00! 
</DocumentFragment>
`;

exports[`expensesSummary is rendered with correct summary 1`] = `
<DocumentFragment>
   viewing  3 expense(s) totalling $21.80! 
</DocumentFragment>
`;
